# dafman

./: -w  .commit-msg-19a.txt  .commit-msg-19b1.txt  .commit-msg-19b2.txt  .commit-msg-19c.txt  .commit-msg-21c.txt  .commit-msg-fix.txt  .commit-msg.tmp  .commit-msg.txt  .editorconfig  .gitattributes  .gitignore  .mcp.json  .prettierrc  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_AUDIT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  DEVLOG.md  LICENSE  MANUAL_TESTS.md  MANUAL_TESTS_archive.md  README.md  SECURITY-REVIEW.md  SECURITY.md  STATUS.md  bunfig.toml  electrobun.config.ts  eslint.config.js  index.html  package-lock.json  package.json  problems.md  tsconfig.bun.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  branch-protection.json  copilot-instructions.md  dependabot.yml  labeler.yml
e2e/: jobs-spinner-probe.pwtest.ts  playwright.config.ts  smoke.pwtest.ts
plans/: DONE.md  README.md  TODO.md  TODO_archive.md  plan-architecture.prompt.md  plan-backlog-audit.prompt.md  plan-e2e.prompt.md  plan-groups-and-projects.prompt.md  plan-groups-projects.prompt.md  plan-implementation-status.prompt.md  plan-messagingAndUx.prompt.md  (+9 more)
src-bun/: index.ts  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  logging.rs  main.rs
src-tauri/src/app/: error.rs  events.rs  mod.rs  models.rs  settings.rs  state.rs
src-tauri/src/ipc/: mod.rs
src-tauri/src/ipc/commands/: client.rs  diagnostics.rs  mod.rs  models.rs  session.rs  settings.rs
src-tauri/tests/: .ipc_contract.rs.pending-snap  ipc_contract.rs
(+463 files in other folders)
