[package]
name = "dafman"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dafman_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
[build-dependencies]
tauri-build = { version = "2", features = [] }
[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# GitHub Copilot SDK — Supercharged distribution, pinned by SHA.
# See plans/plan-sdkAndExternalSurfaces.prompt.md
github-copilot-sdk = { git = "https://github.com/jeremiahjordanisaacson/copilot-sdk-supercharged", rev = "c5c5757e935152c0850a822532036f3eea2ec78e" }
# Observability — see plans/plan-observability.prompt.md
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"
